pirate/pirate-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: pirate
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - secretName: pirate-tls
    hosts:
    - pirate.lukeaddison.co.uk
  rules:
  - host: pirate.lukeaddison.co.uk
    http:
      paths:
      - backend:
          serviceName: pirate
          servicePort: 80
  - host: pirate
    http:
      paths:
      - backend:
          serviceName: pirate
          servicePort: 80
